--- a/_sources/content/examples/nouns-and-data.ipynb
+++ b/_sources/content/examples/nouns-and-data.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "What if we wanted to represent a 2D matrix of numbers?  It may even depend _what kind of number_ we want to represent, since mathematics commonly uses integers (including negative numbers), floating-point numbers, and more.  The convention in Hoon uses a structural pair of a type metadata structure and an atom.\n",
     "\n",
-    "This is a $2 \\times 2$ matrix of unsigned integers with size 1 byte ($2^3$) and a type tag of `0x746e.6975` (`'uint'`):\n",
+    "This is a $2 \\times 2$ matrix of unsigned integers with a size of 1 byte each ($2^3$) and a type tag of `0x746e.6975` (`'uint'`):\n",
     "\n",
     "```\n",
     "[[[2 2 0] 3 0x746e.6975 0] 0x1.0302.0100]\n",
@@ -148,7 +148,9 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "One of the interesting consequences of Nock having an arbitrary atom size means that there are no leading zeros possible.  If you want to represent an array of zeros, you have to pin a `0b1` bit at the MSB to preserve the contiguous size."
+    "* The data are in row-major order starting with the LSB.\n",
+    "* One of the interesting consequences of Nock having an arbitrary atom size means that there are no leading zeros possible.  If you want to represent an array of zeros, you have to pin a `0b1` bit at the MSB to preserve the contiguous size.\n",
+    "* The fourth entry in the metadata structure can be used in various ways depending on the array type; in this case, it is `0` to indicate no special options."
    ]
   },
   {
