--- a/_sources/content/specification/detailed-examples.ipynb
+++ b/_sources/content/specification/detailed-examples.ipynb
@@ -4,15 +4,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO: Add content"
+    "# Detailed Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nock's opcodes supply a Turing-complete instruction set for computation.  This section highlights how each opcode works."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Axiomatic Operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prior to even writing Nock, we must define what the operators used in Nock's expression mean.\n",
+    "\n",
+    "These are the fundamental building blocks of computation in Nock, and all other operations can be constructed from them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Basic Opcodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Opcodes 0 through 5 are primitive instantiations of the axiomatic operators."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to the missing module 'nock_kernel'. Consider installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
+     ]
+    }
+   ],
+   "source": [
+    ":subject 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to the missing module 'nock_kernel'. Consider installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
+     ]
+    }
+   ],
+   "source": [
+    ":formula [4 0 1]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Nock 4K",
+   "language": "nock",
+   "name": "nock"
   },
   "language_info": {
    "codemirror_mode": {
@@ -21,7 +104,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "nock",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.0"
