--- a/_sources/content/understanding/assembly-language-approach.ipynb
+++ b/_sources/content/understanding/assembly-language-approach.ipynb
@@ -59,8 +59,15 @@
     "\n",
     "While the assembly program happens to make no reference to values that may already exist in its scope, it certainly could—there's not a subject-style restriction of scope.  The continuation condition of the program (`j`) and the termination condition (`beq`) are both `GOTO` statements which jump in the scope—and could have jumped anywhere.\n",
     "\n",
+    "For assembly, there's nothing \"special\" about a function:  a function is just a data pattern with a certain header that supports a `GOTO` jump and knows where to find its arguments.  Thus also with Nock, in its way.\n",
+    "\n",
     "Nock, like assembly language, requires the coder or compiler to take pains to express complex ideas using simple pieces.  Probably the biggest difference between the two, however, is that Nock simply has no idea how its instruction will be instantiated on the metal; it is a specification of equivalent behavior.  This makes Nock feel more declarative (but only a little bit more) than assembly language."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
