--- a/_sources/content/specification/opcode-0.ipynb
+++ b/_sources/content/specification/opcode-0.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "id": "e9a1aada",
    "metadata": {},
+   "source": [
+    "# Opcode 0: Address"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa48a4fa",
+   "metadata": {},
    "source": []
   }
  ],
