--- a/_sources/content/specification/opcode-4.ipynb
+++ b/_sources/content/specification/opcode-4.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "id": "b27b9458",
    "metadata": {},
+   "source": [
+    "# Opcode 4: Increment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91536bd4",
+   "metadata": {},
    "source": []
   }
  ],
