--- a/_sources/content/specification/opcode-6.ipynb
+++ b/_sources/content/specification/opcode-6.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "id": "2157e94a",
    "metadata": {},
+   "source": [
+    "# Opcode 6: Conditional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7d9d84c",
+   "metadata": {},
    "source": []
   }
  ],
