--- a/_sources/content/specification/opcode-8.ipynb
+++ b/_sources/content/specification/opcode-8.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "id": "37c28978",
    "metadata": {},
+   "source": [
+    "# Opcode 8: Extend"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "914bad93",
+   "metadata": {},
    "source": []
   }
  ],
