--- a/_sources/content/specification/opcode-9.ipynb
+++ b/_sources/content/specification/opcode-9.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "id": "5394c590",
    "metadata": {},
+   "source": [
+    "# Opcode 9: Invoke"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4546b59d",
+   "metadata": {},
    "source": []
   }
  ],
